<resources>
    <string name="app_name">MyProject</string>
    <string name="tagLine">Build Your Resume In No Time!</string>
    <string name="appLogo">App Logo</string>
    <string name="top_menu_values" />
    <string name="head_page_2">Fill Details To Generate Resume/CV</string>
    <string name="name">Name</string>
    <string name="cat_1">Contact Information</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="ScrollView">ScrollView</string>
    <string name="cat_2">About You</string>
    <string name="desc">Describe Yourself</string>
    <string name="description">Describe Yourself</string>
    <string name="cat_3">Work Experience</string>
    <string name="companyName">Company Name</string>
    <string name="from_year">Working From (Year)</string>
    <string name="to_year">To (Year)</string>
    <string name="job_role">Job Role</string>
    <string name="description2">Description</string>
    <string name="cat_4">Educational Qualification</string>
    <string name="degree">Degree</string>
    <string name="university">University/College Name</string>
    <string name="stud_from">Studying From</string>
    <string name="stud_to">To</string>
    <string name="cat_5">Skills</string>
    <string name="descSkills">Fill your Skills (Use Enter for each skill)</string>
    <string name="gen_button">Generate Resume</string>
    <string name="profile">PROFILE</string>
    <string name="workExperience">WORK EXPERIENCE</string>
    <string name="EducationQ">EDUCATION</string>
    <string name="Skills">SKILLS</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="todo2">TODO</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="get_started">Get Started</string>
</resources>